// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text looks like a "body" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: normal;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 16px;
  line-height: 24px;
}

<Text
  variant="body"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "body.small" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: normal;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 14px;
  line-height: 20px;
}

<Text
  variant="body.small"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "button" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<Text
  variant="button"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "caption" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: normal;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<Text
  variant="caption"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "label" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 1;
  -moz-letter-spacing: 1;
  -ms-letter-spacing: 1;
  letter-spacing: 1;
  text-transform: uppercase;
}

<Text
  variant="label"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "subtitle" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 16px;
  line-height: 24px;
}

<Text
  variant="subtitle"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "subtitle.small" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 14px;
  line-height: 20px;
}

<Text
  variant="subtitle.small"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "title.large" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: normal;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 32px;
  line-height: 40px;
}

<Text
  variant="title.large"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "title.medium" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: normal;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 24px;
  line-height: 32px;
}

<Text
  variant="title.medium"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;

exports[`Text looks like a "title.small" 1`] = `
.emotion-0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: normal;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 20px;
  line-height: 28px;
}

<Text
  variant="title.small"
>
  <p
    className="emotion-0 emotion-1"
  >
    Hello World!
  </p>
</Text>
`;
